--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: python
 python:
   - '3.6'
 install:
+  - pip install -r requirements/test.txt
   - python setup.py install
-  - pip install -I -r requirements/test.txt
 script:
   - pytest --cov=authentic --cov-config .coveragerc tests
 after_success:
