Remove Pylint, upgrade dependencies and specify support for Python 3.7 alone

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,10 @@ universal = 1
 
 [flake8]
 max-line-length = 140
-exclude = */migrations/*
+exclude = 
+    */migrations/*,
+    tests/*.py
+extend-ignore = E731
 
 [tool:pytest]
 testpaths = tests
